# screen-reeder

./: .gitignore  pyproject.toml
src/screen_reeder/: main.py
test/: test.py
