[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "screen-reeder"
version = "0.1.1"
authors = [
    {name = "Andreas Delabie"},
    {email = "andreas.delabie@gmail.com"}
]
requires-python = ">=3.8"
dependencies = [
    "gtts",
    "playsound==1.2.2"
]

[project.scripts]
screen-reeder = "screen_reeder.main:main"